--- a/NotAnotherAnimeThemeDCSL.theme.css
+++ b/NotAnotherAnimeThemeDCSL.theme.css
@@ -17,7 +17,7 @@
     Change the theme background
     Default: https://i.imgur.com/j1Z6HVc.jpg
     */
-    --background-image: url(https://i.imgur.com/j1Z6HVc.jpg);
+    --background-image: url(https://i.imgur.com/13BgRDk.png);
 
     /*
     Change your friends icon image
